--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.studio.suku.made_consumer">
-    <permission android:name="com.studio.suku.made.READ_DATABASE" android:protectionLevel="normal"/>
-    <permission android:name="com.studio.suku.made.WRITE_DATABASE" android:protectionLevel="normal"/>
+    <uses-permission android:name="com.studio.suku.made.READ_DATABASE" android:protectionLevel="normal"/>
+    <uses-permission android:name="com.studio.suku.made.WRITE_DATABASE" android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
@@ -19,5 +19,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
